Added sample code and litthe help text.

--- a/templates/pages/appbar-demo.mustache
+++ b/templates/pages/appbar-demo.mustache
@@ -34,7 +34,21 @@
             </select>
          </form>
 
-      </div>
+         <div class="">
+            <h3>{{_i}}Commands Icons{{/i}}</h3>
+            <p>Commands markup can be made with <code>&lt;a&gt;</code> element or a <code>&lt;button&gt;</code>.</p>
+            <p>{{_i}}To show an icon you should use the glyph code that you find in the <a href="./icons.html">Icons</a> page.{{/i}}</p>
+         </div>
+<pre class="prettyprint linenums">
+&lt;button class="win-command"&gt;
+   &lt;span class="win-commandimage win-commandring"&gt;&#x0021;&lt;/span&gt;
+   &lt;span class="win-label"&gt;Home&lt;/span&gt;
+&lt;/button&gt;
+</pre>
+
+
+
+         </div>
    </div>
 </div>
 
