--- a/templates/partials/header-menu.mustache
+++ b/templates/partials/header-menu.mustache
@@ -5,10 +5,10 @@
    <li><a href="./appbar-demo.html">Demo App-Bar</a></li>
    <li><a href="./table.html">Demo Table</a></li>
    <li><a href="./icons.html">Icons</a></li>
-   <li><a href="./bootstrap-scaffolding.html">Bootstrap Scaffolding</a></li>
-   <li><a href="./bootstrap-base-css.html">Bootstrap Base CSS</a></li>
-   <li><a href="./bootstrap-components.html">Bootstrap Components</a></li>
-   <li><a href="./bootstrap-javascript.html">Bootstrap Javascript</a></li>
+   <li><a href="./scaffolding.html">Bootstrap Scaffolding</a></li>
+   <li><a href="./base-css.html">Bootstrap Base CSS</a></li>
+   <li><a href="./components.html">Bootstrap Components</a></li>
+   <li><a href="./javascript.html">Bootstrap Javascript</a></li>
    <li class="divider"></li>
    <li><a href="./index.html">Home</a></li>
 </ul>
