--- a/content/css/demo.css
+++ b/content/css/demo.css
@@ -89,25 +89,25 @@ hr.soften {
 ------------------------- */
 .jumbotron {
    position: relative;
-   padding: 40px 0;
-   color: #fff;
-   text-align: center;
-   text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
-   background: #020031; /* Old browsers */
-   background: -moz-linear-gradient(45deg,  #020031 0%, #6d3353 100%); /* FF3.6+ */
-   background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#020031), color-stop(100%,#6d3353)); /* Chrome,Safari4+ */
-   background: -webkit-linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* Chrome10+,Safari5.1+ */
-   background: -o-linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* Opera 11.10+ */
-   background: -ms-linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* IE10+ */
-   background: linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* W3C */
-   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', endColorstr='#6d3353',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-   -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-      -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
-           box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+   /*padding: 40px 0;*/
+   /*color: #fff;*/
+   /*text-align: center;*/
+   /*text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);*/
+   /*background: #020031; *//* Old browsers */
+   /*background: -moz-linear-gradient(45deg,  #020031 0%, #6d3353 100%); *//* FF3.6+ */
+   /*background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#020031), color-stop(100%,#6d3353)); *//* Chrome,Safari4+ */
+   /*background: -webkit-linear-gradient(45deg,  #020031 0%,#6d3353 100%); *//* Chrome10+,Safari5.1+ */
+   /*background: -o-linear-gradient(45deg,  #020031 0%,#6d3353 100%); *//* Opera 11.10+ */
+   /*background: -ms-linear-gradient(45deg,  #020031 0%,#6d3353 100%); *//* IE10+ */
+   /*background: linear-gradient(45deg,  #020031 0%,#6d3353 100%); *//* W3C */
+   /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', endColorstr='#6d3353',GradientType=1 ); *//* IE6-9 fallback on horizontal gradient */
+   /*-webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);*/
+      /*-moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);*/
+           /*box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);*/
 }
 .jumbotron h1 {
    font-size: 80px;
-   font-weight: bold;
+   font-weight: normal;
    letter-spacing: -1px;
    line-height: 1;
 }
@@ -120,7 +120,7 @@ hr.soften {
 
 /* Link styles (used on .masthead-links as well) */
 .jumbotron a {
-   color: #fff;
+   /*color: #fff;*/
    color: rgba(255,255,255,.5);
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
@@ -133,22 +133,24 @@ hr.soften {
 
 /* Download button */
 .masthead .btn {
-   font-family: "OpenSansLightRegular",Arial,Helvetica,Sans-Serif;
    padding: 19px 24px;
+   font-family: "Open Sans",Arial,Helvetica,Sans-Serif;
    font-size: 24px;
-   font-weight: 200;
+   font-weight: 400;
    color: #fff; /* redeclare to override the `.jumbotron a` */
    border: 0;
    -webkit-border-radius: 0;
       -moz-border-radius: 0;
            border-radius: 0;
-   -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
-   -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
-   box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
    -webkit-transition: none;
    -moz-transition: none;
    transition: none;
 }
+   .masthead .btn [class^="icon-"] {
+      font-size: 24px;
+      line-height: 24px;
+   }
+
 .masthead .btn:hover {
    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
    -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
@@ -167,32 +169,21 @@ hr.soften {
    position: relative;
    z-index: 2;
 }
-.jumbotron:after {
-   content: '';
-   display: block;
-   position: absolute;
-   top: 0;
-   right: 0;
-   bottom: 0;
-   left: 0;
-   background: url(../img/bs-docs-masthead-pattern.png) repeat center center;
-   opacity: .4;
-}
+
 
 /* Masthead (docs home)
 ------------------------- */
 .masthead {
-   padding: 70px 0 80px;
+   padding: 0;
    margin-bottom: 0;
-   color: #fff;
 }
 .masthead h1 {
-   font-size: 120px;
+   /*font-size: 120px;*/
    line-height: 1;
    letter-spacing: -2px;
 }
 .masthead p {
-   font-size: 40px;
+   /*font-size: 40px;*/
    font-weight: 200;
    line-height: 1.25;
 }
@@ -206,6 +197,14 @@ hr.soften {
    display: inline;
    padding: 0 10px;
    color: rgba(255,255,255,.25);
+}
+
+#hero {
+   display: block;
+   position: relative;
+}
+#hero-image {
+   margin: 60px 0 0 0;
 }
 
 /* Social proof buttons from GitHub & Twitter */
