--- a/templates/pages/index.mustache
+++ b/templates/pages/index.mustache
@@ -99,7 +99,7 @@
             <img src="content/img/detail-hub.png" alt="hub" />
          </div>
          <p>Give more focus to your content. With a Metro style app you give users immediately focus on the primary infos, increasing the usability and reducing the distractions.</p>
-         <p>Use the same tile templates as defined for the original Windows 8 MetroUI.</p>
+         <!--<p>Use the same tile templates as defined for the original Windows 8 MetroUI.</p>-->
       </div>
       <div class="span4">
          <h2>Actions</h2>
@@ -131,7 +131,28 @@
          </div>
          <p>With the awesome <a href="http://keyamoon.com/icomoon">IcoMoon</a> font icon set, you can use hundreds of font icons with any color and any dimension.</p>
       </div>
+      <div class="span4">
+         <h2>Messages</h2>
+         <div class="tile wide image">
+            <img src="content/img/metro-messages.png" alt="icons" />
+         </div>
+         <p>Show messages, warning and errors like Windows 8 do.</p>
+      </div>
    </div>
+   <div class="row-fluid">
+      <div class="span4">
+         <h2>ListViews</h2>
+         <div class="tile wide image">
+            <img src="content/img/listviews.png" alt="charms" />
+         </div>
+         <p>Show selectable lists of elements.</p>
+      </div>
+      <div class="span4">
+      </div>
+      <div class="span4">
+      </div>
+   </div>
+
 </div>
 
 
